# sag

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  preprocessing.cmake
src/: main.cpp
src/formulas/: Blut.cpp  Blut.h  Cubic.cpp  Cubic.h  DeJong.cpp  DeJong.h  Formula.cpp  Formula.h  Plaid.cpp  Plaid.h  Quadratic.cpp  Quadratic.h  Quartic.cpp  Quartic.h  Tinkerbell.cpp  Tinkerbell.h  Trig.cpp  Trig.h  Trigonometric.cpp  Trigonometric.h  UserDefined.cpp  UserDefined.h  Wreath.cpp  Wreath.h  all.cpp.in  all.h.in
src/generation/: CustomDistribution.cpp  CustomDistribution.h  EqualDistribution.cpp  EqualDistribution.h  Generator.cpp  Generator.h  Grid.cpp  Grid.h  ParamDistribution.cpp  ParamDistribution.h  Particle.cpp  Particle.h  SimpleGenerator.cpp  SimpleGenerator.h  SingleThreadedGenerator.cpp  SingleThreadedGenerator.h  ThreadedGenerator.cpp  ThreadedGenerator.h
src/gui/: Application.cpp  Application.h  AttractorEditor.cpp  AttractorEditor.h  AttractorView.cpp  AttractorView.h  ChooserWindow.cpp  ChooserWindow.h  GUI.cpp  GUI.h  StandaloneAttractorView.cpp  StandaloneAttractorView.h
src/imaging/: Image.cpp  Image.h  PixbufImage.cpp  PixbufImage.h
src/rendering/: PixbufRenderer.cpp  PixbufRenderer.h  Renderer.cpp  Renderer.h
src/utils/: Bounds.cpp  Bounds.h  Color.cpp  Color.h  ConcurrentQueue.h  Grid.cpp  Grid.h  Particle.cpp  Particle.h  Random.cpp  Random.h  Range.h  Vector.cpp  Vector.h  serialization.cpp  serialization.h  types.h  utils.h
